refactor: 清理AgentService冗余代码及优化日志